support adding users to team
